<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Investigator</string>

    <string name="text_account">Account</string>
    <string name="text_action_face_capture">Capture</string>
    <string name="text_action_fingerprint_capture">Capture</string>
    <string name="text_capture_again">Capture again</string>
    <string name="text_done">Done</string>
    <string name="text_enrollment">Enrollment</string>
    <string name="text_female">Female</string>
    <string name="text_identification">Identification</string>
    <string name="text_identifying">Identifying&#8230;</string>
    <string name="text_login">Login</string>
    <string name="text_male">Male</string>
    <string name="text_matching_result">Matching result</string>
    <string name="text_matching_result_info">%1$s, Age: %2$d</string>
    <string name="text_password">Password</string>
    <string name="text_please_wait">Please wait&#8230;</string>
    <string name="text_processing">Processing&#8230;</string>
    <string name="text_connect_finger">Connect finger device&#8230;</string>
    <string name="text_reading">Reading&#8230;</string>
    <string name="text_score">Score</string>
    <string name="text_settings">Settings</string>
    <string name="text_sex">Sex</string>
    <string name="text_switch_camera">Switch camera</string>
    <string name="text_template">Template</string>
    <string name="text_unspecified">Unspecified</string>
    <string name="text_waiting_passport">Waiting&#8230;</string>

    <string name="dialog_no_network">No internet connections available. Please check your network settings.</string>

    <string name="error_empty_account">Please enter account</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="error_invalid_account_password">Invalid account or password</string>
    <string name="error_operation_failed">Unable to complete this operation, please try again</string>
    <string name="error_no_identification_method">Please select at least one method</string>
    <string name="error_identification_failed">Identification failed, please try again</string>
    <string name="error_no_matching_result">No match available</string>
    <string name="error_camera_not_found">Camera not found</string>
    <string name="error_finger_device_not_found">Fingerprint device not found</string>
    <string name="error_save_image">Unable to save image</string>

    <string name="splash_state_obtaining_licenses">Obtaining licenses&#8230;</string>
    <string name="splash_state_licenses_not_obtained">Unable to obtain licenses</string>
    <string name="splash_state_initializing_client">Initializing&#8230;</string>
    <string name="splash_state_client_not_initialized">Unable to complete initialization</string>

    <string name="label_face_capture">Face capture</string>
    <string name="label_fingerprint_capture">Fingerprint capture</string>
    <string name="label_identification_method_selection">Select method(s) to identify</string>

    <string name="alert_dialog_delete_title">Delete</string>
    <string name="alert_dialog_delete_content">Are you sure to delete the selected %1$d person(s)?</string>
    <string name="alert_dialog_clear_user_data">Are you sure to clear all identification user data?</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="text_admin_selected">Select %1$d person(s)</string>
    <string name="text_add_account_title">Add new account</string>
    <string name="text_add_account_text">Please fill the following items</string>
    <string name="text_english_name">English name</string>
    <string name="text_password_title">Password</string>
    <string name="text_confirm_password_title">Confirm Password</string>
    <string name="text_add_account">Create account</string>
    <string name="text_add_user_account">Done</string>

    <string name="text_setting_activity_title">System settings</string>
    <string name="text_normal_setting">General settings</string>
    <string name="text_account_management">Account management</string>
    <string name="text_clear_data">Clear data</string>
    <string name="text_about">About</string>
    <string name="text_application_version">App version</string>
    <string name="text_logout">Logout</string>
    <string name="text_capture_face_title">Face capture</string>
    <string name="text_age">Age</string>
    <string name="text_modify_account_title">Modify account</string>
    <string name="text_modify_password">Modify password</string>
    <string name="text_old_password">Old password</string>
    <string name="text_new_password">New password</string>
    <string name="text_save_modification">Save modification</string>
    <string name="text_welcome_to_use">Welcome to</string>
    <string name="text_investigator_system">Investigator System</string>
    <string name="text_finger_login">Fingerprint login</string>
    <string name="text_face_login">Face login</string>
    <string name="text_capture_face">Capture face</string>
    <string name="text_capture_finger">Fingerprint</string>
    <string name="text_more_options">More options</string>

    <string name="text_toast_type_name">Please enter your name</string>
    <string name="text_toast_duplicate_name">Duplicated name</string>
    <string name="text_toast_password_not_matched">Password not matched</string>
    <string name="text_toast_password">Please enter your password</string>
    <string name="text_toast_select_age">Please select age</string>
    <string name="text_toast_select_gender">Please select gender</string>
    <string name="text_toast_capture_face">Please capture the face</string>
    <string name="text_toast_capture_finger">Please capture the fingerprint</string>
</resources>
