<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="@dimen/common_margin_large"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:layout_marginLeft="@dimen/common_margin_medium"
            android:layout_marginRight="@dimen/common_margin_medium"
            android:layout_marginBottom="@dimen/common_margin_medium">

            <TextView
                android:id="@+id/oldpwtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_item_text_color"
                android:textSize="@dimen/common_item_text_size"
                android:layout_marginTop="@dimen/common_margin_medium"
                android:text="@string/text_old_password"/>

            <EditText
                android:id="@+id/oldpw"
                android:layout_below="@id/oldpwtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/common_edit_spinner_text_size"
                android:textColor="@android:color/white"
                android:theme="@style/EditTextStyle"
                android:layout_marginTop="@dimen/common_margin_small"
                android:layout_marginBottom="@dimen/common_margin_small"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/newpwtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/oldpw"
                android:layout_marginTop="@dimen/common_margin_medium"
                android:textColor="@color/common_item_text_color"
                android:textSize="@dimen/common_item_text_size"
                android:text="@string/text_new_password"/>

            <EditText
                android:id="@+id/newpw"
                android:layout_below="@id/newpwtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/common_edit_spinner_text_size"
                android:textColor="@android:color/white"
                android:theme="@style/EditTextStyle"
                android:layout_marginTop="@dimen/common_margin_small"
                android:layout_marginBottom="@dimen/common_margin_small"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/confirmpwtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/newpw"
                android:layout_marginTop="@dimen/common_margin_medium"
                android:textColor="@color/common_item_text_color"
                android:textSize="@dimen/common_item_text_size"
                android:text="@string/text_confirm_password_title"/>

            <EditText
                android:id="@+id/confirmpw"
                android:layout_below="@id/confirmpwtitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="@dimen/common_edit_spinner_text_size"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:theme="@style/EditTextStyle"
                android:layout_marginTop="@dimen/common_margin_small"
                android:layout_marginBottom="@dimen/common_margin_small"
                android:maxLines="1"/>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>